--- a/assets/pages/turkish.html
+++ b/assets/pages/turkish.html
@@ -1,56 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ubuntu&display=swap");
+    <title>Türkçe İçerikler</title>
+   
+     <!-- CSS file added -->
+     <link rel="stylesheet" href="../css/page.css" />
+     <!-- end CSS file -->
 
-      * {
-        margin: 0;
-        padding: 0;
-        color: #fff;
-      }
-
-      body {
-        background-color: #1b3664;
-      }
-
-      .flex-container {
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        align-items: center;
-      }
-
-      .main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        height: 25vh;
-        width: 100vw;
-        font: 40px "Indie Flower", cursive; /* thanks to @utku-bilgin for showing me this beautiful font*/
-      }
-
-      a {
-        height: 20px;
-        width: 80px;
-        padding: 1em 1.5em;
-        border: 3.5px dashed #0278e0;
-        border-radius: 40px;
-        font: 600 18px "Ubuntu", sans-serif;
-        text-decoration: none;
-        text-align: center;
-        transition: background-color 1s;
-      }
-
-      a:hover {
-        background-color: #0278e0;
-      }
-    </style>
   </head>
   <body>
     <div class="flex-container">
