Added transition for sidebar and made some changes

--- a/assets/pages/english.html
+++ b/assets/pages/english.html
@@ -16,7 +16,7 @@
       <!-- Sidebar -->
       <aside id="sidebar-nav">
         <div class="lang-container">
-          <span class="mobilebar" id="closebuton"> <- </span>
+          <span class="mobilebar" id="closebuton" title="Close the sidebar"> <- </span>
           <a id="lang" class="fs-14" href="./turkish.html" title="If you want to see turkish those resources Click this buton">TR</a>
         </div>
 
@@ -34,7 +34,7 @@
       <!-- End Sidebar -->
       <!-- Main -->
       <section id="main">
-        <span class="mobilebar" id="openbuton"> -> </span>
+        <span class="mobilebar" id="openbuton" title="Open the sidebar"> -> </span>
         <article id="week-1" class="content">
           <h1 class="fs-22">Week 1</h1>
           <h2>
