--- a/assignments/weeks.html
+++ b/assignments/weeks.html
@@ -11,7 +11,7 @@
 </head>
 <body class="text-black">
     <div class="container">
-        <div class="form-control">
+        <div class="form-control sticky-top">
             <select name="weeks" class="form-control" id="weeks">
                 <option id="temp" value="" style="display: none;"></option>
             </select>
