Create Readme and projects already completed

--- a/assets/pages/english.html
+++ b/assets/pages/english.html
@@ -25,6 +25,7 @@
         </h1>
         <div class="menu-nav">
           <h4>Index</h4>
+          <div class="list-item"><a href="../../assignments/weeks.html" target="_blank" title="Week 1 contents">Projects Page</a></div>
           <div class="list-item"><a href="./english.html#week-1" title="Week 1 contents">Week 1</a></div>
           <div class="list-item"><a href="./english.html#week-2" title="Week 2 contents">Week 2</a></div>
           <div class="list-item"><a href="./english.html#week-3" title="Week 3 React works">Week 3</a></div>
