--- a/assignments/weeks.html
+++ b/assignments/weeks.html
@@ -11,7 +11,8 @@
 </head>
 <body class="text-black">
     <div class="container">
-        <div class="form-control sticky-top">
+        <div class="form-control sticky-top m-auto">
+            <label for="weeks" class="ms-2 text-warning">Select One Week</label>
             <select name="weeks" class="form-control" id="weeks">
                 <option id="temp" value="" style="display: none;"></option>
             </select>
